--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.11.0",
+    "@stripe/stripe-js": "^1.52.1",
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
@@ -18,7 +19,7 @@
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "leaflet": "^1.9.3",
-    "next": "13.2.4",
+    "next": "^13.2.4",
     "next-auth": "^4.20.1",
     "next-cloudinary": "^4.0.1",
     "next-superjson-plugin": "^0.5.6",
@@ -32,6 +33,7 @@
     "react-leaflet": "^4.2.1",
     "react-select": "^5.7.2",
     "react-spinners": "^0.13.8",
+    "stripe": "^12.2.0",
     "swr": "^2.1.1",
     "world-countries": "^4.0.0",
     "zustand": "^4.3.6"
